@@ -3,6 +3,7 @@ Version: 0.4.8
 Date: ????
   Bugfixes:
     - Fixed a crash when a player is removed from the game. (#45)
+    - Fixed that the GUI would not account for a player changing forces during the course of a game.
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.7
 Date: 2023-08-25
